# picatso

./: .gitignore  README.md  pyproject.toml
src/picatso/: main.py
src/picatso/data/: api_result.json
src/picatso/ui/: main_window.py
src/picatso/utils/: controller.py
