[project]
name = "picatso"
version = "0.1.0"
description = "Calls an image of a cat, and randomizes a color palette for your imagination to draw the cat with."
authors = [
    {name = "Charles Vazquez",email = "164092735+vazqc@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyside6 (>=6.10.0,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "picatso", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
